add: september tasks

--- a/prj.codeforces/CMakeLists.txt
+++ b/prj.codeforces/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(hello_world hello_world.cpp)
+add_executable(1771a 1771a.cpp)
+add_executable(1701a 1701a.cpp)
+add_executable(1800a 1800a.cpp)
+add_executable(1879a 1879a.cpp)
