add: october tasks

--- a/prj.codeforces/CMakeLists.txt
+++ b/prj.codeforces/CMakeLists.txt
@@ -2,3 +2,7 @@ add_executable(1771a 1771a.cpp)
 add_executable(1701a 1701a.cpp)
 add_executable(1800a 1800a.cpp)
 add_executable(1879a 1879a.cpp)
+add_executable(339b 339b.cpp)
+add_executable(579a 579a.cpp)
+add_executable(1407a 1407a.cpp)
+add_executable(1675b 1675b.cpp)
