--- a/prj.cw/CMakeLists.txt
+++ b/prj.cw/CMakeLists.txt
@@ -1,3 +1,3 @@
 find_package(OpenCV REQUIRED)
 add_executable(main main.cpp)
-target_link_libraries(main ${OpenCV_LIBS})
+target_link_libraries(main PRIVATE ${OpenCV_LIBS} )
