--- a/prj.codeforces/CMakeLists.txt
+++ b/prj.codeforces/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(1030a 1030a.cpp)
 add_executable(282a 282a.cpp)
 add_executable(41a 41a.cpp)
 add_executable(148a 148a.cpp)
+add_executable(200b 200b.cpp)
+add_executable(151a 151a.cpp)
