--- a/prj.codeforces/CMakeLists.txt
+++ b/prj.codeforces/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(0041a 0041a.cpp)
 add_executable(0148a 0148a.cpp)
 add_executable(0200b 0200b.cpp)
 add_executable(0151a 0151a.cpp)
+add_executable(1675b 1675b.cpp)
